--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+	"start": "webpack -d --colors && node server.js",
     "dev": "webpack -d --watch",
     "build": "webpack -p"
   },
@@ -22,7 +23,9 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
+    "body-parser": "^1.15.2",
     "compression-webpack-plugin": "^0.3.2",
+    "express": "^4.14.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "webpack": "^1.13.2"
