--- a/package.json
+++ b/package.json
@@ -24,11 +24,21 @@
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "body-parser": "^1.15.2",
+    "classnames": "^2.2.5",
     "compression-webpack-plugin": "^0.3.2",
     "express": "^4.14.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "postcss-cssnext": "^2.8.0",
+    "postcss-import": "^8.1.2",
+    "postcss-nested": "^1.0.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-router": "^2.8.1",
     "webpack": "^1.13.2"
+  },
+  "devDependencies": {
+    "css-loader": "^0.25.0",
+    "postcss-loader": "^1.0.0",
+    "style-loader": "^0.13.1"
   }
 }
