--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "postcss-nested": "^1.0.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
+    "redux": "^3.6.0",
     "webpack": "^1.13.2"
   },
   "devDependencies": {
