--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack -p --colors && node server.js",
     "dev": "webpack -d --watch",
-    "build": "webpack -p"
+    "build": "webpack -p --define process.env.NODE_ENV='\"production\"'"
   },
   "repository": {
     "type": "git",
