--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "webpack -p --colors && node server.js",
     "dev": "webpack -d --watch",
-    "build": "webpack -p --define process.env.NODE_ENV='\"production\"'"
+    "build": "NODE_ENV=production webpack -p",
+	"prod": "npm run build && NODE_ENV=production pm2 start server.js"
   },
   "repository": {
     "type": "git",
