--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "webpack -p --colors && node server.js",
     "dev": "webpack -d --watch",
     "build": "NODE_ENV=production webpack -p",
-	"prod": "npm run build && NODE_ENV=production pm2 start server.js"
+    "prod": "npm run build && NODE_ENV=production pm2 start server.js",
+	"server": "webpack --config webpack.server.js",
+	"client": "webpack --config webpack.config.js -p",
+	"deploy-dev": "node serverEntry.js"
   },
   "repository": {
     "type": "git",
@@ -20,15 +23,20 @@
   },
   "homepage": "https://github.com/nishantdania/renderlist-frontend#readme",
   "dependencies": {
+    "babel-cli": "^6.18.0",
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "body-parser": "^1.15.2",
     "classnames": "^2.2.5",
     "compression-webpack-plugin": "^0.3.2",
+    "core-js": "^2.4.1",
+    "ejs": "^2.5.3",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "isomorphic-style-loader": "^1.1.0",
+    "json-loader": "^0.5.4",
     "postcss-cssnext": "^2.8.0",
     "postcss-import": "^8.1.2",
     "postcss-nested": "^1.0.0",
