--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "dev": "webpack -d --watch",
     "build": "NODE_ENV=production webpack -p",
     "prod-client": "npm run build && NODE_ENV=production pm2 start server.js",
-    "server": "webpack --config webpack.server.js -p",
-    "client": "webpack --config webpack.config.js -p",
+    "server": "webpack --config webpack.server.js --watch",
+    "client": "webpack --config webpack.config.js --watch",
     "server-prod": "NODE_ENV=production webpack --config webpack.server.js -p",
     "client-prod": "NODE_ENV=production webpack --config webpack.config.js -p",
-    "deploy-dev": "node serverEntry.js",
+    "deploy-dev": "nodemon serverEntry.js",
 	"deploy": "npm run client-prod && npm run server-prod && NODE_ENV=production pm2 start serverEntry.js"
   },
   "repository": {
