--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "server-prod": "NODE_ENV=production webpack --config webpack.server.js -p",
     "client-prod": "NODE_ENV=production webpack --config webpack.config.js -p",
     "deploy-dev": "nodemon serverEntry.js",
-	"deploy": "npm run client-prod && npm run server-prod && NODE_ENV=production pm2 start serverEntry.js"
+    "deploy": "npm run client-prod && npm run server-prod && NODE_ENV=production pm2 start serverEntry.js"
   },
   "repository": {
     "type": "git",
@@ -29,6 +29,7 @@
     "babel-cli": "^6.18.0",
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.5",
+    "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "body-parser": "^1.15.2",
