--- a/config.json
+++ b/config.json
@@ -1,3 +1,4 @@
 {
-	"featured-profile-link" : "/timotheclaeys"
+	"featured-profile-link" : "/timotheclaeys",
+	"featured-profile-name" : "Claeys Timothe"
 }
