--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-	"featured-profile-link" : "/timotheclaeys",
-	"featured-profile-name" : "Claeys Timothe"
+	"featured-profile-link" : "/heshameissa",
+	"featured-profile-name" : "Hesham Eissa"
 }
