updated featured showreel

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-	"featured-profile-link" : "/heshameissa",
-	"featured-profile-name" : "Hesham Eissa"
+	"featured-profile-link" : "/urbanbradesko",
+	"featured-profile-name" : "Urban Bradeško"
 }
